Creating the AddTaskActivity and using ViewBinding

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="Criar Tarefa"
+        app:title="@string/lable_new_task"
         app:navigationIcon="@drawable/ic_navigate"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="Título"
+        android:hint="@string/label_hint_title"
         app:layout_constraintStart_toStartOf="@+id/guide_start"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="Descrição"
+        android:hint="@string/label_hint_description"
         app:layout_constraintStart_toStartOf="@+id/guide_start"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
         app:layout_constraintTop_toBottomOf="@+id/til_title">
@@ -68,7 +68,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="Data"
+        android:hint="@string/label_hint_date"
         app:startIconDrawable="@drawable/ic_calendar"
         app:layout_constraintStart_toStartOf="@+id/guide_start"
         app:layout_constraintEnd_toStartOf="@id/til_hour"
@@ -86,7 +86,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="Hora"
+        android:hint="@string/label_hint_hour"
         app:startIconDrawable="@drawable/ic_timer"
         app:layout_constraintStart_toEndOf="@+id/til_date"
         app:layout_constraintTop_toTopOf="@+id/til_date"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:text="Cancelar"
+        android:text="@string/label_cancel"
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="@+id/guide_start"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
@@ -116,7 +116,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         style="@style/Widget.MaterialComponents.Button"
-        android:text="Criar Tarefa"
+        android:text="@string/lable_new_task"
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="@+id/guide_start"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
