--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -26,6 +26,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_more"
         android:layout_width="36dp"
         android:layout_height="36dp"
         app:srcCompat="@drawable/ic_more"
